# investrak

./: .gitignore  CHANGELOG.md  portfolio_analytics.csv  pyproject.toml  test_commands.py
docs/: README.md  ROADMAP.md
investrak/: __init__.py
investrak/cli/: __init__.py  main.py
investrak/core/: __init__.py  analytics.py  export.py  models.py  storage.py
investrak/web/: main.py  run.py
investrak/web/static/: styles.css
investrak/web/templates/: add_investment.html  base.html  create_goal.html  create_portfolio.html  edit_goal.html  error.html  goal_detail.html  goals.html  home.html  portfolio.html  portfolio_analytics.html
scripts/: test_investment_model.py  test_portfolio.py
test_data/: portfolios.json
tests/: conftest.py  test_cli.py  test_investment_commands.py
tests/core/: test_export.py  test_models.py  test_storage.py
tests/test_cli/: test_analytics.py  test_export.py  test_export_commands.py  test_goals.py
tests/test_core/: test_analytics.py  test_goals.py
